Configures multilingual support and updates content
Adds support for the Korean language including translation of the summary.

Updates the base URL in the configuration file.

Includes a LaTeX equation and a link to the Korean blog posts on the index page.

Updates the search index due to base URL change.

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://huansock.github.io/"
+base_url = "https://huansock.github.io" 
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
@@ -14,3 +14,12 @@ highlight_code = true
 
 [extra]
 # Put all your custom variables here
+
+[languages.ko]
+generate_feeds = true 
+
+[languages.ko.translations]
+summary = "띠따뿌 블로그"
+
+[translations]
+summary = "Hblog"
